<resources>
    <string name="app_name">Stock Beaver</string>
    <!-- Strings used for fragments for navigation -->

    <string name="signup">signup</string>
    <string name="login">login</string>
    <string name="StockBeaver">Stock Beaver</string>
    <string name="stock_portfolio">Track your portfolio | Paper Trading</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="title_activity_main_page">MainPage</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_company_info">companyInfo</string>
    <string name="tab_text_1">Current</string>
    <string name="tab_text_2">Financial</string>
    <string name="tab_text_3">Technical</string>
    <string name="tab_text_4">News</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fundamental">Fundamental</string>
    <string name="technical">Technical</string>

    <string name="news">News</string>
    <string name="current">Current</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


</resources>