<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F4F3"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/login"
        android:layout_width="330dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:layout_marginTop="250dp"
        android:background="#F0F4F3"
        android:backgroundTint="#FF4019"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:backgroundTint="#32413A"
        app:iconTint="#32413A"
        tools:layout_editor_absoluteY="471dp" />

    <Button
        android:id="@+id/register"
        android:layout_width="330dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:layout_marginTop="410dp"
        android:background="#F0F4F3"
        android:backgroundTint="#FF4019"
        android:text="@string/signup"

        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:backgroundTint="#FF4019"
        app:iconTint="#32413A"
        tools:layout_editor_absoluteY="471dp" />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/StockBeaver"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/track_text2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/stock_portfolio"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        tools:layout_editor_absoluteY="427dp" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>